# spatial-inequality

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  data_fetcher.py  docker-compose.yml  dump.rdb  environment.yml  notes.md  optimise.py  population_optimisation.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  setup.md  setup.py  urban_observatory.ipynb  utils.py
.github/workflows/: main.yml
api/: app.py  config.py  start_services.sh  tasks.py  worker.py
app/: app.py  worker.py
data/: README.md
data/processed/: centroids.csv  population_ages.csv  population_total.csv  workplace.csv
data/processed/E08000021/: centroids.csv  population_ages.csv  population_total.csv  workplace.csv
data/processed/E08000021/la_shape/: la.dbf  la.shp  la.shx
data/processed/E08000021/oa_shape/: oa.dbf  oa.shp  oa.shx
data/processed/E08000021/uo_sensors/: uo_sensors.dbf  uo_sensors.shp
data/processed/E08000037/: centroids.csv  population_ages.csv  population_total.csv  workplace.csv
data/processed/E08000037/la_shape/: la.dbf  la.shp  la.shx
data/processed/E08000037/oa_shape/: oa.dbf  oa.shp  oa.shx
data/processed/E08000037/uo_sensors/: uo_sensors.dbf  uo_sensors.shp  uo_sensors.shx
data/processed/oa_shapes/: oa_shapes.dbf  oa_shapes.shx
data/processed/traffic_counts/: traffic_counts.dbf  traffic_counts.shp  traffic_counts.shx
data/processed/tyne_oa/: tyne_oa.dbf  tyne_oa.shx
data/processed/uo_sensors/: uo_sensors.dbf  uo_sensors.shx
notebooks/: coverage_stats.ipynb  greedy_vs_genetic.ipynb  oa_importance.ipynb  oa_weighting.ipynb  optimisation_baselines.ipynb  optimisation_cambridge.ipynb  optimisation_combined_weightings.ipynb  optimisation_design.ipynb  optimisation_multiobjective.ipynb  optimisation_pygmo_multiobj.ipynb  optimisation_pygmo_singleobj.ipynb  optimisation_pymoo.ipynb  optimisation_scipy.ipynb  optimisation_with_weightings.ipynb  paper_figures.ipynb  population_data.ipynb  reviewer_comments.py  traffic_counts.ipynb  traffic_counts_space_syntax.ipynb  urban_observatory.ipynb
notebooks/paper_figures/: README.md  networks_singleobj.pkl
notebooks/paper_figures/E08000021/: uo_sensors.dbf  uo_sensors.shp  uo_sensors.shx
notes/: API.md  Optimisation.md  README.md  data.md
publications/OptimisingForEquity/: README.md  config.yml  figs_demographics.py  figs_multi_convergence.py  figs_multi_objs.py  figs_single_obj.py  figs_two_objs.py  figs_urb_obs.py  main.py  networks_multi_objs.py  networks_random.py  networks_single_obj.py  networks_two_objs.py  report.py  report_template.md  sensors_urb_obs.py  utils.py
publications/OptimisingForEquity_AAG/: README.md  config.py  config.yml  config_backup.yml  figs_demographics.py  figs_multi_objs.py  figs_single_obj.py  figs_style.py  figs_two_objs.py  figs_urb_obs.py  main.py  networks_multi_objs.py  networks_single_obj.py  networks_two_objs.py  report.py  report_template.md  sensors_urb_obs.py  utils.py
scripts/: add_oa_coverage.py  client.py  img_to_vid.sh  index.html  networks_multi_objs.py  save_oa_importance.py  save_sensor_placement.py
sensor_sites/: Dockerfile  test_pointset.py
sensor_sites/classes/: __init__.py  config.py  evengrid.py  extractgrid.py  oagrid.py  pointset.py  randomgrid.py  settings.ini.example
spineq/: __init__.py  cli.py  config.py  data_fetcher.py  dataset.py  genetic.py  greedy.py  local_authority.py  mappings.py  numba_greedy.py  optimise.py  plotting.py  space_syntax.py  urb_obs.py  utils.py  weights.py
spineq/data/: base.py  census.py  fetcher.py  group.py  local_authority.py  school.py  urb_obs.py
spineq/opt/: coverage.py  genetic.py  greedy.py  objectives.py  opt.py  optimise.py  pygmo.py  random.py  result.py
spineq/plot/: plotting.py
tests/: conftest.py  test_utils.py
tests/sample/data/raw/: centroids.csv  health.csv  oa_mappings.csv  population_ages.csv  population_total.csv  schools.csv
tests/sample/raw/: workplace.csv
tests/sample/raw/uo_sensors/: uo_sensors.shp  uo_sensors.shx
tests/test_spineq/: test_mappings.py  test_utils.py
tests/test_spineq/data/: test_base.py  test_census.py  test_group.py  test_local_authority.py  test_school.py  test_urb_obs.py
tests/test_spineq/opt/: test_coverage.py  test_greedy.py  test_objectives.py  test_opt.py  test_pygmo.py  test_result.py
(+4 files in other folders)
